# mcp_core

./: .env.example  .gitignore  AGENTS.md  CLEANUP_NOTES.md  DEPLOYMENT_STRUCTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README-TEST.md  README.md  README_MYSQL.md  README_TEST.md  README_TEST_DEPLOY.md  best_mcp_lstm_model.h5  comprehensive_evaluation.py  demoMCPproject.ipynb  desktop.ini  docker-compose.yml  pyproject.toml  requirements.txt  schema_mcp.txt  test_full_deploy_flow.py  validate_mvp.ps1  validate_mvp.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md  refactor.md
.github/workflows/: codex-review.yml  deploy.yml
app/: deploy_main.py  main.py
app/config/: settings.py
app/core/: README_core.md  anomaly.py  context_extractor.py  db.py  db_sqlalchemy.py  errors.py  hourly_flavor_mapper.py  metric_history.py  metrics.py  openstack_client.py  persistence_models.py  policy.py  projects_store.py  router.py  security.py
app/core/alerts/: dedupe.py  discord_alert.py
app/core/openstack/: __init__.py  client.py  deployer.py  flavor_mapper.py
app/core/predictor/: __init__.py  base.py  baseline_predictor.py  lstm_predictor.py  requirements.txt  train_from_notebook.py
app/core/predictor/data_sources/: __init__.py  base.py  csv_source.py  factory.py  mysql_source.py
app/database/: __init__.py  connection.py
app/models/: common.py  deploy.py  destroy.py  hourly_plans.py  model_user.py  plans.py  projects.py  status.py  users.py
app/predictor/: base.py  baseline_predictor.py  init.py  lstm_predictor.py
app/routes/: deploy.py  destroy.py  hourly_plans.py  plans.py  predict.py  projects.py  router_auth.py  status.py
backend_api/: README.md  main.py  requirements.txt
backend_api/services/: __init__.py  github_analyzer.py  mcp_core_client.py
data/: lstm_ready_cluster_data.csv
data/example/: plans_request_example.json  plans_response_example.json
database/: README.md  init_db.py  test_user_db.py
database/migrations/: EXAMPLE_migration.sql
database/schemas/: 001_users_authentication.sql
db/: schema_mvp.sql  schema_unified.sql
docs/: DATA_FLOW.md  HOURLY_FLAVOR_README.md  MCP_CORE_ARCHITECTURE.md  README_KR.md  api_guide.md  architecture.md  deployment_guide.md  openstack_integration.md  operations_update.md  persistence_mvp.md  user_management_guide.md  worklog_20250119.md
examples/: sample_context.json  sample_plans_response.json
mcp_analyzer/: README.md  USAGE.md  requirements.txt  server.py  server_production.py  setup.ps1
models/: DOWNLOAD.md  README.md  UPLOAD_GUIDE.md  best_mcp_lstm_checkpoint.h5  best_mcp_lstm_model.h5  complete_mcp_lstm.h5  mcp_model_metadata.pkl  training_history.json
scripts/: backup_mysql.sh  call_multi_plans.py  download_models.py  ingest_metric_history.py  start_mysql.sh  stop_mysql.sh
tests/: anomaly_check.py  conftest.py  discord_test.py  full_chain_check.py  smoke_check.py  test_anomaly_discord.py  test_baseline_predictor.py  test_context_extractor.py  test_flavor_mapper.py  test_router.py
