[project]
name = "mcp-core"
version = "0.1.0"
description = "MCP core service: Openstack 기반 자동 배포/모니터링 API"
authors = [
    {name = "nAhYUN22",email = "lily.nahyunlee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"

# Web framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }

# Config & HTTP
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
requests = "^2.32.0"

# OpenStack & infra
openstacksdk = "^4.0.0"
paramiko = "^3.5.0"

# 기타 사용할 수 있는 것들 (원하면 빼도 됨)
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
pytest = "^8.3.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
mcp-core-api = "main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
