[project]
name = "mcp-core"
version = "0.1.0"
description = "MCP core service: Openstack 기반 자동 배포/모니터링 API"
authors = [
    {name = "nAhYUN22",email = "lily.nahyunlee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"

# Web framework
fastapi = "^0.104.0"
uvicorn = { version = ">=0.24.0", extras = ["standard"] }

# Config & HTTP
python-dotenv = "^1.0.1"
httpx = "^0.25.0"
requests = "^2.32.0"
aiofiles = ">=23.2.0"


# OpenStack & infra
openstacksdk = "^4.0.0"
paramiko = "^3.5.0"

# 기타 사용할 수 있는 것들 (원하면 빼도 됨)
numpy = ">=1.24.0"
pandas = ">=2.0.0"
sqlalchemy = "^2.0.44"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

# Data science & ML
tensorflow = ">=2.13.0"
h5py = ">=3.9.0"
scikit-learn = ">=1.3.0"

# Database (선택적 - MySQL 사용 시)
SQLAlchemy = ">=2.0.0"
PyMySQL = ">=1.1.0"

# Auth / validation
pydantic = ">=2.0.0"
python-multipart = ">=0.0.6"
email-validator = "^2.3.0"
passlib = "^1.7.4"

# External APIs & 기타 유틸
PyGithub = ">=2.1.1"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
pytest = "^8.3.0"
mypy = "^1.13.0"
matplotlib = "^3.8.0"  # 학습 스크립트에서만 사용

[tool.poetry.scripts]
mcp-core-api = "main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
