[tool.poetry]
name = "mcp-core"
version = "0.1.0"
description = "MCP core service: OpenStack 기반 자동 배포/모니터링 API"
authors = [
    {name = "nAhYUN22", email = "lily.nahyunlee@gmail.com"}
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"

# Web framework
fastapi = "^0.104.0"
uvicorn = { version = ">=0.24.0", extras = ["standard"] }
pydantic = ">=2.0.0"
python-multipart = ">=0.0.6"

# Config & HTTP
python-dotenv = "^1.0.1"
httpx = "^0.25.0"
requests = "^2.32.0"
aiofiles = ">=23.2.0"

# OpenStack & infra
openstacksdk = "^4.0.0"
paramiko = "^3.5.0"

# Database
sqlalchemy = "^2.0.44"
pymysql = ">=1.1.0"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
email-validator = "^2.3.0"

# ML / Data
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
tensorflow = ">=2.13.0"
h5py = ">=3.9.0"

# External APIs
pygithub = ">=2.1.1"
anthropic = ">=0.39.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
pytest = "^8.3.0"
mypy = "^1.13.0"

[tool.poetry.group.train.dependencies]
# 모델 훈련 시에만 필요 (train_from_notebook.py)
# 설치: poetry install --with train
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"


[tool.poetry.scripts]
mcp-core-api = "app.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
